--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ body {
 /* кнопка */
 .button{
     border-radius: 4px;
-    border: 4px solid transparent;
+    border: transparent;
     padding: 10px 32px;
     
     color: var(--primary-white-color);
@@ -240,6 +240,9 @@ body {
     margin-left: 30px;
 }
 
+.work-list .img{
+    display: block;
+}
 /* секція наша команда */
 .team-list{
     font-size: 16px;
@@ -252,16 +255,19 @@ body {
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    padding-bottom: 30px;
 }
 .team-list .team-member + .team-member{
     margin-left: 30px;
 }
 
-.team-member .foto{
-    margin-bottom: 30px;
-}
 
+.team-member .foto{
+    display: block;
+}
+.team-member .description{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 /* піб тіммейта */
 .team-member .title{
     color: var(--primary-text-color);
@@ -349,8 +355,7 @@ body {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    margin: 0;
-   
+    margin: 0; 
 }
 /* зображення прикладів робіт */
 .examples-img{
@@ -391,7 +396,6 @@ body {
 }
 /* перелік контактів(адресс) у футері */
 .footer-adr-list{
-
 }
 /* фізична адресса в футері */
 .f-adress{
@@ -406,14 +410,12 @@ body {
     margin-right: 0;
 }
 
-
-
 /* колір емайлу та телефону в футері */
 .footer-adr-list .link{
     color: var(--transp-foot-text-color);
     text-decoration: none;
 }
-
+/* відстань між елементами переліку контактів в футерь */
 .footer-adr-list .item + .item{
     margin-top: 9px;
 }
