--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,8 @@ body {
 
     font-weight: 700;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 /* стиль для опису інструментів */
