--- a/css/style.css
+++ b/css/style.css
@@ -397,8 +397,9 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 0;
+    padding-top: 20px;
 }
 /* перелік контактів(адресс) у футері */
 .footer-adr-list{
@@ -418,19 +419,22 @@ body {
 .footer .logo{
     color:var(--primary-white-color);
     margin-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
+
 }
 
 /* колір емайлу та телефону в футері */
 .footer-adr-list .link{
-    display: flex;
     color: var(--transp-foot-text-color);
     text-decoration: none;
     margin-top: 0;
     margin-bottom: 0;
     
 }
+.footer-adr-list .item{
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 /* відстань між елементами переліку контактів в футерь */
 .footer-adr-list .item + .item{
     margin-top: 9px;
