--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
     
 }
 .footer-adr-list .item{
-    display: block;
+    display: inline-block;
     margin-top: 0;
     margin-bottom: 0;
 }
