--- a/css/style.css
+++ b/css/style.css
@@ -388,8 +388,7 @@ body {
 .footer{
     background-color: var(--secondary-bkg-color);
     padding-top: 60px;
-    padding-bottom: 60px;
-    
+    padding-bottom: 60px;  
 }
 /* контейнер адресси */
 .footer-adr{
@@ -434,6 +433,7 @@ body {
     display: block;
     margin-top: 0;
     margin-bottom: 0;
+    padding: 0;
 }
 
 /* відстань між елементами переліку контактів в футерь */
