--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 /* синій колір #2196F3 */
 /* чорний колір для лого #000000 */
 /* колір не активної кнопки #F5F4FA */
+/* сірий колір бордерів #ECECEC */
 :root{
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
@@ -15,7 +16,8 @@
   --primary-white-color: #ffffff;
   --calm-button-bg-color: #F5F4FA;
   --transp-foot-text-color: rgba(100%,100%,100%,60%);
-  --secondary-bkg-color: #2F303A
+  --secondary-bkg-color: #2F303A;
+  --bordering-color: #ECECEC;
   
 }
 
@@ -44,6 +46,7 @@ body {
 .visually-hidden {
     position: absolute;
     white-space: nowrap;
+    
     width: 1px;
     height: 1px;
     overflow: hidden;
@@ -58,7 +61,7 @@ body {
 
 .header{
     display: block;
-    border-bottom: 1px solid #ECECEC;
+    border-bottom: 1px solid var(--bordering-color);
 }
 
 .main-nav{
@@ -69,6 +72,7 @@ body {
 .logo{
     margin-right: 93px;
     color: var(--primary-text-color);
+    padding: 10px 0;
 
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -330,7 +334,6 @@ body {
     width: calc((100%-60px)/3);
     margin-right: 30px;
     margin-bottom: 30px;
-    padding-bottom: 20px;
 }
 .examples .item:nth-child(3n){
     margin-right: 0;
@@ -358,7 +361,7 @@ body {
 .example-category{
     color: var(--secondary-text-color);
     font-size: 16px;
-    line-height: 1.88;
+    line-height: 1.875;
     letter-spacing: 0.03em;
     margin: 0; 
 }
@@ -370,9 +373,9 @@ body {
 .example .description{
     margin: 0;
     padding: 20px 24px;
-    border-bottom: 1px solid #ECECEC;
-    border-right: 1px solid #ECECEC;
-    border-left: 1px solid #ECECEC;
+    border-bottom: 1px solid var(--bordering-color);
+    border-right: 1px solid var(--bordering-color);
+    border-left: 1px solid var(--bordering-color);
 
 }
 /* стиль для детального опису прикладів робіт */
@@ -381,6 +384,7 @@ body {
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
+    
 }
 
 
@@ -396,22 +400,16 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    margin-top: 0px;
-    margin-bottom: 0;
     padding-top: 20px;
 }
 /* перелік контактів(адресс) у футері */
 .footer-adr-list{
-    margin-top: 0;
-    margin-bottom: 0;
+
 }
 /* фізична адресса в футері */
 .f-adress{
     color: var(--primary-white-color);
     text-decoration: none;
-    margin-top: 0;
-    margin-bottom: 0;
-    display: inline-block;
 }
 
 
@@ -425,10 +423,9 @@ body {
 .footer-adr-list .link{
     color: var(--transp-foot-text-color);
     text-decoration: none;  
-    display: inline-block;
 }
 .footer-adr-list .item{
-display: block;}
+}
 
 /* відстань між елементами переліку контактів в футерь */
 .footer-adr-list .item + .item{
